--- a/docs/web/javascript/03-语言基础.md
+++ b/docs/web/javascript/03-语言基础.md
@@ -45,7 +45,7 @@ age = 26;
 
 ### 1. 块作用域
 
-- `let`声明的作用域仅限于该代码块内部，是函数作用域的子集。`ES5`只有全局作用域和函数作用域。
+- 每一个同级代码块之间的作用域都是独立的，不能相互访问，`let`声明的作用域仅限于该代码块内部。`ES5`只有全局作用域和函数作用域。
 
 ```js
 if (true) {
@@ -124,6 +124,8 @@ let age = 30; // SyntaxError: Identifier 'age' has already been declared
 
 ### 5. for 循环中的 let 声明
 
+- 使用`var`声明的`i`变量是一个全局变量，即每次`for`循环时修改和访问的都是同一个全局变量。而`let`声明变量的作用域仅限于`for`循环内部，相当于每一次循环的`i`都是一个新的变量。
+
 ```js
 for (var i = 0; i < 5; ++i) {
   // 循环逻辑
@@ -150,4 +152,107 @@ for (let i = 0; i < 5; ++i) {
 }
 ```
 
-- 使用`var`声明的`i`变量是一个全局变量，即每次循环时修改访问的都是同一个全局变量。而`let`迭代变量的作用域仅限于`for`循环内部，相当于每一次循环的`i`都是一个新的变量，
+<br />
+
+```js
+for (let i = 0; i < 3; i++) {
+  let i = 123;
+  console.log(i); // 打印三次
+}
+```
+
+- 打印三次`123`，由此可以看出`let`声明的循环变量跟循环体内的变量不是同一个作用域，因为同一个作用域不可使用`let`重复声明同一个变量。
+
+<br/>
+
+```js
+var iArr = [];
+for (var i = 0; i < 5; i++) {
+  iArr[i] = function () {
+    console.log(i);
+  };
+}
+console.dir(iArr[2]);
+
+var jArr = [];
+for (let j = 0; j < 5; j++) {
+  jArr[j] = function () {
+    console.log(j);
+  };
+}
+console.dir(jArr[2]);
+```
+
+- 上面代码的打印结果为
+
+![inheritAttrs: true](./images/03-01.png)
+
+## const 声明
+
+- `const`的行为于`let`基本相同，唯一一个重要的区别是用它声明变量时必须同时初始化变量，且不能修改。
+
+```js
+// 报错（暂时性死区）
+console.log(age);   // ReferenceError: Cannot access 'age' before initialization
+
+const age = 26;
+if (true) {
+  const age = 36;
+}
+// 块级作用域
+console.log(age); // 26
+
+// 报错（重新赋值）
+age = 20;   // TypeError: Assignment to constant variable.
+
+// 报错（未初始化）
+const max;  // SyntaxError: Missing initializer in const declaration
+
+// 报错（不允许重复声明）
+const age = 46;  // SyntaxError: Identifier 'age' has already been declared
+```
+
+<br/>
+
+### 本质
+
+- `const`保证的是变量指向的那个`栈内存`所保存的数据不得改动。
+- 简单数据类型，变量指向的`栈内存`中保存的是值，因此等同于常量。
+- 复杂数据类型，变量指向的`栈内存`中保存的是指向实际数据的指针（指向堆内存的地址），`const`只能保证这个指针不变，至于指针指向的数据结构则不受控制。
+
+```js
+const person = {};
+
+person.age = 26; // 不会报错
+
+// 变量指向的内存中的指针变化了
+person = {
+  // 报错。TypeError: Assignment to constant variable.
+  age: 36,
+};
+```
+
+## 数据结构
+
+- 七种简单数据类型（原始值）：Undefined、Null、Boolean、Number、String、Symbol（ES6 新增），Bigint（ES11 新增）。
+- 一种复杂数据类型（引用值）：Object
+
+### typeof 操作符
+
+```js
+console.log(typeof undefined); // undefined
+console.log(typeof null); // object
+console.log(typeof true); // boolean
+console.log(typeof 1); // number
+console.log(typeof "name"); // string
+console.log(typeof Symbol(26)); // symbol
+console.log(typeof 123n); // bigint(解决Number数据过大的精确度问题)
+console.log(typeof function () {}); // function
+console.log(typeof []); // object
+console.log(typeof {}); // object
+```
+
+- undefined：未初始化变量，表示声明了一个变量，但没有赋值。一般不需要显示设置。`undefined`是由`null`派生来的。
+- null：空对象指针，表示不存在、无效的对象或地址引用。一般变量要保存对象，但目前又没有那个对象可保存，就可以用`null`来填充（语义化）。
+
+**注意**：严格来讲，函数也是对象，并不代表一种数据类型。可是，函数也有自己特殊的属性（任何实现内部[call]方法的对象都应该返回`function`）。所以，就有必要通过`typeof`操作符来区分函数和其它对象。
